2005-10-17 Pierrick LE GALL

	* improvement: use new function get_language_filepath in about.php
	(complement of bug 168 correction)
	
2005-10-17 Pierrick LE GALL

	* bug 154 fixed: "Calendar category, too precise dates". Bug came
	from the bigger precision of creation_date and available_date in
	images tables. Need to retrieve only the year-month-day
	information.
	
2005-10-17 volcom

	* new: history details by month,day
	
2005-10-15 Pierrick LE GALL

	* modification: localized labels in Administration>Pictures>Caddie

	* translation: bug fixed on special categories title in French

	* translation: all help pages were translated in french

2005-10-09 Pierrick LE GALL

	* new: "quick start" section in Administration>General>Instructions
	
2005-10-08 Pierrick LE GALL

	* translation: new items related to configuration parameters
	gallery_title and gallery_description in GUI.

2005-10-08 Pierrick LE GALL

	* modification: configuration parameters gallery_title and
	gallery_description are GUI managed in
	Administration>Configuration>General

	* bug fixed: configuration parameters (use|show)_(exif|iptc) and
	authorize_remembering should have been deleted from config table
	some time ago.
	
2005-10-08 Pierrick LE GALL

	* new: mass virtual categories movement manager in
	Administration>Categories>Move screen.

2005-10-05 Pierrick LE GALL

	* bug 160 fixed: (part one of the bug) hard coded column name of
	users table had to be replaced by the configurable column
	name. This correction was made by a full rewrite of filtered users
	list management. The other bug (not submited in bugtracker) that
	needed this rewrite was that when you choose "all" as target for
	mass users modification, you expected to apply modification on
	filtered users, not all users.

	* bug 160 fixed: (part two of the bug) hard coded column name for
	primary key in mass_updates function.

	* modification: configuration parameter users_page is now located